app/kubernetes/base/app/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app: profile-app
spec:
  type: ClusterIP
  selector:
    app: profile-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
